--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	data--50p-top="opacity:1;"
 	data--100p-top="opacity:1;padding-top:20%;transform:rotate(0deg) scale(1)"
 	data--140p-top="opacity:0;transform:rotate(180deg) scale(.5)">
-	Scientist and Musician
+	Biologist and Computer Guy
 	</h2>
 </div>
 
@@ -92,7 +92,7 @@
 	data--100p-top="opacity:0"
 	data--150p-top="opacity:1"
 	data--200p-top="opacity:0">
-	Turned Full Stack Developer
+	Turned Computational Biologist
 	</h2>
 </div>
 
