--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
 </div>
 
 
+
 <div class="fixed-wrapper" data-smooth-scrolling="off">
 	<div id="goldengate"
 	data-anchor-target="#slide-1"
 	data-0p-top="opacity:1;"
 	data--90p-top="opacity:1;"
-	data--110p-top="opacity:0">
+	data--110p-top="opacity:0"
+	>
 	<h1 id="meet-paul">Meet Paul Gaudin</h1>
+
+	
 	</div>
 </div>
 
@@ -81,7 +85,7 @@
 	data--50p-top="opacity:1;"
 	data--100p-top="opacity:1;padding-top:20%;transform:rotate(0deg) scale(1)"
 	data--140p-top="opacity:0;transform:rotate(180deg) scale(.5)">
-	Biologist and Computer Guy
+	Biolochemist and programmer
 	</h2>
 </div>
 
@@ -92,7 +96,7 @@
 	data--100p-top="opacity:0"
 	data--150p-top="opacity:1"
 	data--200p-top="opacity:0">
-	Turned Computational Biologist
+	Versed in full stack development, data engineering, and data science
 	</h2>
 </div>
 
@@ -336,6 +340,36 @@
 		<a href="https://github.com/polyg314"><img src="img/github_logo_white.png"></a>
 		<a href="http://stackoverflow.com/users/4356179/paul-g"><img src="img/stackoverflow.png"></a>
 	</div>
+	<div
+	id="links-c"
+	data-anchor-target="#slide-7"
+	data-center-top="opacity:0;z-index:-100"
+	data-top-top="opacity:1;z-index:100000"
+	>
+
+	<a id="portfolio-link" href="portfolio/portfolio.html">View Portfolio Apps ></a>
+
+	</div>
+
+	<div
+	id="links-d"
+	data-anchor-target="#slide-1"
+	data-0p-top="opacity:1;"
+	data--70p-top="opacity:0;"
+
+	>
+	<a id="portfolio-link-1" href="portfolio/portfolio.html">View Portfolio Apps ></a>
+	</div>
+	<div
+	id="links-f"
+	data-anchor-target="#slide-1"
+	data-70p-top="opacity:0;"
+	data--100p-top="opacity:1;"
+	data--110p-top="opacity:0"
+	>
+		... or scroll for fun :) 
+	</div>
+
 	<div id="fireFly1" 	data-anchor-target="#slide-7"
 	data-center-top="opacity:0;"
 	data-top-top="opacity:1;" class="fireFly glow"></div>
