--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	data--50p-top="opacity:1;"
 	data--100p-top="opacity:1;padding-top:20%;transform:rotate(0deg) scale(1)"
 	data--140p-top="opacity:0;transform:rotate(180deg) scale(.5)">
-	Biolochemist and programmer
+	Computational Biologist and Software Engineer
 	</h2>
 </div>
 
@@ -96,7 +96,7 @@
 	data--100p-top="opacity:0"
 	data--150p-top="opacity:1"
 	data--200p-top="opacity:0">
-	Versed in full stack development, data engineering, and data science
+	Well-versed in full stack development, data engineering, and data science
 	</h2>
 </div>
 
@@ -347,7 +347,7 @@
 	data-top-top="opacity:1;z-index:100000"
 	>
 
-	<a id="portfolio-link" href="portfolio/portfolio.html">View Portfolio Apps ></a>
+	<!-- <a id="portfolio-link" href="portfolio/portfolio.html">View Portfolio Apps ></a> -->
 
 	</div>
 
@@ -358,9 +358,9 @@
 	data--70p-top="opacity:0;"
 
 	>
-	<a id="portfolio-link-1" href="portfolio/portfolio.html">View Portfolio Apps ></a>
+	<!-- <a id="portfolio-link-1" href="portfolio/portfolio.html">View Portfolio Apps ></a> -->
 	</div>
-	<div
+	<!-- <div
 	id="links-f"
 	data-anchor-target="#slide-1"
 	data-70p-top="opacity:0;"
@@ -368,7 +368,7 @@
 	data--110p-top="opacity:0"
 	>
 		... or scroll for fun :) 
-	</div>
+	</div> -->
 
 	<div id="fireFly1" 	data-anchor-target="#slide-7"
 	data-center-top="opacity:0;"
